# pglift

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
ansible/: tests.sh
ansible/modules/: postgresql_instance.py
ci/debian/: Dockerfile
ci/testing/: Dockerfile  Dockerfile.centos8  Dockerfile.debian  Dockerfile.rockylinux8
debian/: changelog  control  copyright  python-pglib-doc.install  rules  systemd-pglift.postinst  systemd-pglift.postrm
debian/source/: options
docs/: ansible.rst  cli.rst  conf.py  datamodel.rst  dev.rst  index.rst  install.rst  settings.rst
docs/ansible/: play1.yml  play2.yml  play3.yml
docs/api/: cmd.rst  conf.rst  ctx.rst  databases.rst  datamodel.rst  exceptions.rst  index.rst  instance.rst  instances.rst  manifest.rst  pgbackrest.rst  roles.rst
docs/howto/: standby-setup.rst
docs/ops/: monitoring.rst
docs/setup/: index.rst  systemd.rst
docs/tutorials/: ansible.rst  cli.rst  index.rst  install.rst
src/pglib/: __init__.py  _cmd.py  ansible.py  backup.py  cmd.py  conf.py  ctx.py  hookspecs.py  install.py  instance.py  manifest.py  model.py  pg.py  pgbackrest.py  pm.py  postgres.py  prometheus.py  settings.py  systemd.py  task.py  types.py  util.py
src/pglift/: __init__.py  _compat.py  _install.py  ansible.py  backup.py  cli.py  cmd.py  conf.py  ctx.py  databases.py  db.py  exceptions.py  hookspecs.py  install.py  instance.py  instances.py  manifest.py  model.py  passfile.py  pgbackrest.py  pgpass.py  pm.py  postgres.py  privileges.py  prometheus.py  queries.py  queries.sql  roles.py  settings.py  systemd.py  task.py  types.py  util.py
tests/: __init__.py  conftest.py  test_backup.py  test_cmd.py  test_install.py  test_instance.py  test_manifest.py  test_model.py  test_pgbackrest.py  test_pm.py  test_postgres.py  test_prometheus.py  test_settings.py  test_systemd.py  test_task.py  test_util.py
tests/data/: ansible-argspec-database.json  ansible-argspec-instance.json  ansible-argspec-postgresexporter.json  ansible-argspec-role.json  queries.json
tests/func/: __init__.py  (+16 more)
(+79 files in other folders)
