[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
exclude =
  .tox
  .venv
select = B,C,E,F,W,T4,B9
ignore =
  E203, # whitespace before ':'
  E266, # too many leading '#' for block comment
  E501, # line too long
  W503, # line break before binary operator

[mypy]
show_error_codes = true
strict = true
warn_unused_ignores = true
