[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[codespell]
exclude-file = .codespell-exclude-file
skip = .eggs,.git,.mypy_cache,.tox,.venv,./docs/_build,htmlcov

[coverage:run]
source = src


[mypy]
files = .
exclude = /build/
show_error_codes = true
strict = true
warn_unused_ignores = true

[mypy-pglift._compat]
warn_unused_ignores = false

[mypy-ansible.*]
ignore_missing_imports = true

[mypy-ansible_collections.dalibo.pglift.*]
ignore_missing_imports = true

[mypy-contextlib2]
ignore_missing_imports = true

[mypy-importlib_metadata]
ignore_missing_imports = true

[mypy-humanize]
ignore_missing_imports = true

[mypy-pluggy]
ignore_missing_imports = true

[mypy-port_for]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-tabulate]
ignore_missing_imports = true

[tool:pytest]
addopts = --doctest-modules -ra
filterwarnings =
  error::DeprecationWarning
testpaths = src tests/unit tests/func
