[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[codespell]
exclude-file = .codespell-exclude-file
skip = .eggs,.git,.mypy_cache,.tox,.venv,./docs/_build,htmlcov

[coverage:run]
source = src

[tool:pytest]
addopts = --doctest-modules -ra
filterwarnings =
  error::DeprecationWarning
testpaths = src tests/unit tests/func
